Show human-readable dates in tooltips
In month/year/week view, when you hover the mouse over an event, the tooltip contains (among other things) the dates and (optionally) times of the duration of the event.
The dates are formatted as ??/??/?? instead of ISO 8601, and therefore I can't read them. However, in the specific case of the tooltips (where no data entry is expected, unlike the event editing dialog), I would suggest the dates to be written out in natural language instead. Some examples with various scenarios:
- June 24 to June 28
- June 24 to July 3
- June 24
- June 24, 18:00-21:00
- 18:00 (June 24) to 07:45 (June 25)
The last example is only tricky when GNOME Calendar will support timezones and different start/end timezones, which I guess could be "18:00 UTC-5 (June 24) to 07:45 UTC+1 (June 25)"
Edited by Jeff Fortin