https://gitlab.gnome.org/GNOME/gnome-calendar/issues/253

Date in event widget tooltip changed from the "unreadable" to human readable
form.